--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
 
                 <div class="w3-twothird">
                     <h1>User Login</h1>
-                    <form action="https://github.com/sauravhathi/the-book-spot/blob/master/userprofile.html" method="post">
+                    <form action="userprofile.html" method="post">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
